Fix word wrap for titles

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -785,6 +785,7 @@ Mixins
 
 		&__title {
 			margin: 0;
+			word-wrap: break-word;
 
 			a {
 				text-decoration: none;
@@ -908,6 +909,7 @@ Mixins
 
 		&__name {
 			margin: 0;
+			word-wrap: break-word;
 
 			a {
 				text-decoration: none;
@@ -1047,6 +1049,7 @@ Mixins
 
 		&__name {
 			margin: 0;
+			word-wrap: break-word;
 
 			a {
 				text-decoration: none;
